--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 .button{
-    width: 45px;
+    width: 90px;
+    height: 40px;
 }
 
 body{
@@ -16,13 +17,14 @@ body{
 
 .display{
     border: 1px solid black;
-    width: 165px;
+    width: 350px;
     padding: 5px;
     margin-bottom: 0.5%;
+    display: flex;
 }
 
 .container{
-    padding-top: 20%;
+    padding-top: 15%;
     display: flex;
     flex-direction: column;
     align-items: center;
