Add display optimisations

--- a/style.css
+++ b/style.css
@@ -18,9 +18,12 @@ body{
 .display{
     border: 1px solid black;
     width: 350px;
+    height: 30px;
     padding: 5px;
-    margin-bottom: 0.5%;
+    margin-bottom: 1%;
     display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 .container{
